IstioCanary/configfiles/firstservice.yaml
apiVersion: v1
kind: Service
metadata:
    name: kube-canary-app
    label:
        app: kube-canary-app

spec:
    #This define which pods are going to be pointed by this service
    selector:
        app: kube-canary-app
        
    ports:
        - name: http
          port: 8080
