IstioCanary/configfiles/workloadv1.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-canary-app
  labels:
    app: kube-canary-app
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: kube-canary-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-canary-app-deployment-v1
spec:
  selector:
    matchLabels:
      app: kube-canary-app
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: kube-canary-app
        version: v1
    spec:
      containers:
      - name: webapp
        image: pmusale/istiocanary:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-canary-app-deployment-v2
spec:
  selector:
    matchLabels:
      app: kube-canary-app
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: kube-canary-app
        version: v2
    spec:
      containers:
      - name: webapp
        image: pmusale/istiocanary:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
