IstioCanary/configfiles/istiocanary-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-canary-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name:  kube-canary-app
spec:
  hosts:
    - kube-canary-app
  gateways:
    - istio-canary-gateway
  http:
  - match:
    - uri:
        exact: /welcome
    route:
    - destination:
        host: kube-canary-app
        subset: v1
        port:
          number: 8080
      weight: 90
    - destination:
        host: kube-canary-app
        subset: v2
        port:
          number: 8080
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kube-canary-app
spec:
  host: kube-canary-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
