IstioCanary/configfiles/virtual-service-Canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-message-app
spec:
  hosts:
    - hello-message-app
  http:
  - route:
    - destination:
        host: hello-message-app
        subset: v1
      weight: 90
    - destination:
        host: hello-message-app
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-message-app
spec:
  host: hello-message-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
