IstioCanary/configfiles/virtual-service-CanaryTest.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "hello-message-app"
spec:
  hosts:
    - "hello-message-app"
  http:
  - route:
    - destination:
        host: "hello-message-app"
        port:
          number: 8888
        subset: v1
      weight: 90
    - destination:
        host: "hello-message-app"
        port:
          number: 8888
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-message-app
spec:
  host: hello-message-app
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
